Fixing tech spacing and scroll bar for exp

--- a/app/globals.css
+++ b/app/globals.css
@@ -43,3 +43,20 @@ body {
   transform: rotate(0deg);
   transition: transform 300ms ease-out;
 }
+
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+::-webkit-scrollbar-track {
+    background: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #888;
+    border-radius: 5px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: #555;
+}
